--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,36 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
+  <div class="header">
+    <h1>Alec Galloway</h1>
+    <h2>Professional Problem Solver</h2>
+  </div>
 
-  Welcome to the HTML Portfolio Project
+  <div class="tagline">
+    <h3>About Me</h3>
+      <p>As I mentioned earlier my name is Alec, but my full name is Alec Galloway. I am originally from Chicago, IL, but I recently moved to Kirkland, WA to pursue greater opportunities. Now I love Chicago, and may very well go back eventually, but right now I needed to hop off the porch and remove myself from a comfortable environment to focus up. Currently I work for a company called Luxoft doing manual device testing for a AT&T, a client of ours. This device testing consists of mobile devices such as tablets and phones, both old and new. Essentially our team tests around network, software, and hardware to find any defects and ensure consistent and expected behavior before software is pushed out to consumers across the nation.
+
+      I have a background in IT, working for a company called RE:Sources for several years before this providing helpdesk services for over several hundred clients. I worked with a small team of 4 (+1 bi-anual intern) locally on-site to service issues as simple as helping users attach to the company wifi, all the way to several step projects that took us months to finish such as migrating all of our users to a new unified domain and new e-mail clients (IBM Lotus Notes to MS Outlook). My experiences at RE:Sources taught me a lot about problem solving and troubleshooting, which have served me well not only in real life but in my other work related ventures.
+
+      When I'm not working I like to listen to music, watch/play sports, and am getting into hiking since WA has much more of a suitable landscape for that.</p>
+  </div>
+
+  <div class="skills">
+    <h3>My Skills</h3>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Android/iOS proficient</li>
+        <li>Windows/MacOS proficient</li>
+        <li>Troubleshooting</li>
+      </ul>
+  </div>
+
+  <div class="contact">
+    <h3>Contact</h3>
+      <p>If you'd like to contact me please feel free to reach out to my <a href="twitter.com/oncrepe">Twitter</a> or <a href="github.com/ijome">Github</a> test</p>
+  </div>
+
 
 </body>
 </html>
