add p to the skills section

--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
         <li>Windows/MacOS proficient</li>
         <li>Troubleshooting</li>
       </ul>
+
+      <p>As far as coding is concerned, I've dabbled in it for several years, but never fully commited.  The majority of my career has been in IT Services, as I mentioned above.  These skills were aquired from roles served as on site helpdesk support, and more recently manual mobile device testing.</p>
   </div>
 
   <div class="contact">
     <h3>Contact</h3>
-      <p>If you'd like to contact me please feel free to reach out to my <a href="twitter.com/oncrepe">Twitter</a> or <a href="github.com/ijome">Github</a> test</p>
+      <p>If you'd like to contact me please feel free to reach out to my <a href="twitter.com/oncrepe">Twitter</a> or <a href="github.com/ijome">Github</a></p>
   </div>
 
 
